# skeleton-cicd

./: LICENSE  README.md  pyproject.toml  to_lint.py  to_test.py
.github/workflows/: cicd.yml
